--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://blog.doteight.com
 title: Rob's Blog
-subtitle: A blogging framework for hackers.
+subtitle: A subtitle will end up here somehow.
 author: Rob O'Dwyer
 simple_search: http://google.com/search
 description: Rob's Blog.
